--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,21 +1,32 @@
 // Footer//
 .footer {
-    background-color:  #84A178;
+  background-color: #84a178;
 }
-.footer__main {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
+// .footer__main {
+//   @media screen and (min-width: 768px) {
+//     // display: flex;
+//     // align-items: center;
+//     // justify-content: space-between;
+//   }
+// }
 // Text //
+.footer__container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .footer-banner {
-  margin-bottom: 40px;
-  padding-inline-start: 0;
-  @media screen and (max-width: 1199px) {
-    width: 234px;
-    margin-bottom: 40px;
+  margin-bottom: 42px;
+  width: 234px;
+  // padding-inline-start: 0;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 352px;
+    // margin-bottom: 40px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 504px;
+    // margin-bottom: 40px;
   }
   &__paragraph {
     font-family: 'Montserrat', sans-serif;
@@ -26,70 +37,75 @@
     text-transform: uppercase;
     margin-bottom: 16px;
     color: var(--primery-text-color);
-    @media screen and (min-width: 1200px) {
-      font-style: normal;
-      text-transform: uppercase;
-      color: var(--primery-text-color);
-      font-size: 30px;
-      line-height: 1.2;
-      font-weight: 400;
-      letter-spacing: 0.4em;
-      margin-bottom: 14px;
-    }
-    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+
+    @media screen and (min-width: 768px) {
       font-size: 26px;
-      line-height: 1.22;
-      letter-spacing: 0.4em;
-      font-style: normal;
+      line-height: 32px;
+      letter-spacing: 0.04em;
       margin-bottom: 9px;
-      width: 352px;
       height: 57px;
       font-weight: 700;
-      text-transform: uppercase;
-
     }
-}
+
+    @media screen and (min-width: 1200px) {
+      color: var(--primery-text-color);
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 37px;
+      margin-bottom: 14px;
+    }
+  }
 }
 .footer-banner__header {
   font-family: 'Montserrat', sans-serif;
-  font-size: 34px;
-  line-height: 1.2;
   font-style: normal;
   font-weight: 700;
-  letter-spacing: 0.4em;
+  font-size: 34px;
+  line-height: 41px;
+  letter-spacing: 0.04em;
   color: var(--primery-text-color);
   text-transform: uppercase;
-  @media screen and (min-width: 1200px) {
-    font-style: normal;
+
+  @media screen and (min-width: 768px) {
     font-weight: 700;
-    font-size: 58px;
-    line-height: 1.22;
+    font-size: 48px;
+    line-height: 59px;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
-     }
-     @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-      font-size: 48px;
-      line-height: 1.22;
-      letter-spacing: 0.06em;
-      width: 340px;
-      font-style: normal;
-      font-weight: 700;
-     }
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 71px;
+  }
 }
 // Socials //
-.socials {
+
+.socials-box {
+  margin-left: auto;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 780px) {
+    margin-bottom: 0;
+    margin-top: 68px;
+  }
+}
+
+.socials__list {
   display: flex;
   margin-bottom: 38px;
-  &__list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
- }
- &__item:not(:last-child) {
-  margin-right: 28px;
- }
+  // justify-content: center;
+  // align-items: center;
+  // margin-left: auto;
+  @media screen and (min-width: 780px) {
+    margin-bottom: 32px;
+    justify-content: end;
+  }
 }
+
+.socials__item:not(:last-child) {
+  margin-right: 28px;
+}
+
 .socials__link {
   display: flex;
   justify-content: center;
@@ -97,10 +113,10 @@
   width: 34px;
   height: 34px;
   background-color: var(--primery-accent-color);
-  color: #84A178;
+  color: #84a178;
   border-radius: 50%;
   transition: color var(--main-animation);
-  
+
   &:hover {
     color: var(--primery-text-color);
   }
@@ -114,8 +130,8 @@
 }
 // Contacts //
 .footer-contacts {
-  display: flex;
-  margin-bottom: 40px;
+  // display: flex;
+  // margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
     margin: 0;
@@ -161,7 +177,7 @@
   width: 100%;
   justify-content: center;
   padding: 16px 20px;
-  
+
   &__text {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
@@ -170,6 +186,6 @@
     line-height: 152%;
     /* or 21px */
     text-align: center;
-    color: #7A7A7A;
-}
+    color: #7a7a7a;
+  }
 }
