--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -49,8 +49,8 @@
       </ul>
       <!-- <div class="footer-contacts"> -->
       <!-- <address class="footer-contacts__address"> -->
-      <p>
-        <span class="footer-contacts__text">Feel free to contact</span>
+      <p class="footer-contacts__text">
+        Feel free to contact
         <a class="footer-contacts__tel link" href="tel:+610383766284"
           >+61 (0) 383 766 284</a
         >
@@ -59,8 +59,7 @@
       <!-- </div> -->
     </div>
     <!-- </div> -->
-    <div class="copyright">
-      <p class="copyright__text">© 2022 - IceCream. All Rights Reserved.</p>
-    </div>
   </div>
+  <div class="footer-border"></div>
+  <p class="copyright">© 2022 - IceCream. All Rights Reserved.</p>
 </footer>
