--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,7 +1,7 @@
 // Footer//
-.footer {
-  background-color: #84a178;
-}
+// .footer {
+// background-color: #84a178;
+// }
 // .footer__main {
 //   @media screen and (min-width: 768px) {
 //     // display: flex;
@@ -11,26 +11,38 @@
 // }
 // Text //
 .footer__container {
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
+  display: block;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+
+  @media screen and (min-width: 1200px) {
+    // flex-wrap: nowrap;
+    justify-content: center;
+    margin-bottom: 60px;
+  }
 }
 
 .footer-banner {
   margin-bottom: 42px;
   width: 234px;
   // padding-inline-start: 0;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     width: 352px;
-    // margin-bottom: 40px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 32px;
   }
 
   @media screen and (min-width: 1200px) {
     width: 504px;
-    // margin-bottom: 40px;
+    margin-bottom: 0;
   }
   &__paragraph {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.22;
@@ -57,8 +69,8 @@
   }
 }
 .footer-banner__header {
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
+  // font-family: 'Montserrat', sans-serif;
+  // font-style: normal;
   font-weight: 700;
   font-size: 34px;
   line-height: 41px;
@@ -82,23 +94,28 @@
 
 .socials-box {
   margin-left: auto;
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 40px;
+  }
 
-  @media screen and (min-width: 780px) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 0;
-    margin-top: 68px;
+    // margin-top: 68px;
   }
 }
 
 .socials__list {
   display: flex;
+  justify-content: end;
   margin-bottom: 38px;
-  // justify-content: center;
-  // align-items: center;
-  // margin-left: auto;
-  @media screen and (min-width: 780px) {
+
+  @media screen and (min-width: 768px) {
     margin-bottom: 32px;
-    justify-content: end;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
   }
 }
 
@@ -130,9 +147,6 @@
 }
 // Contacts //
 .footer-contacts {
-  // display: flex;
-  // margin-bottom: 40px;
-
   @media screen and (min-width: 768px) {
     margin: 0;
   }
@@ -140,13 +154,12 @@
     text-align: right;
   }
   &__text {
-    font-family: 'Montserrat' sans-serif;
-    font-style: normal;
+    text-align: end;
     font-weight: 700;
     font-size: 12px;
     line-height: 1.86;
     color: var(--primery-title-color);
-    @media screen and(min-width:768px) and (max-width: 1199px) {
+    @media screen and(min-width:768px) {
       font-size: 14px;
     }
     @media screen and(min-width:1200px) {
@@ -155,37 +168,40 @@
     }
   }
   &__tel {
-    font-family: 'Montserrat' sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.86;
     color: var(--primery-text-color);
-    @media screen and(min-width:768px) and (max-width: 1199px) {
-      font-size: 14px;
-    }
-    @media screen and(min-width:1200px) {
-      font-size: 16px;
-      letter-spacing: 0.2em;
-    }
   }
 }
 // Copyright //
+.footer-border {
+  border-top: 1px solid #e1e1e1;
+  border-width: 100%;
+}
+
 .copyright {
   text-align: center;
-  border-top: 1px solid #e1e1e1;
-  width: 100%;
-  justify-content: center;
-  padding: 16px 20px;
 
-  &__text {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 152%;
-    /* or 21px */
-    text-align: center;
-    color: #7a7a7a;
+  padding-top: 16px;
+  padding-bottom: 62px;
+
+  @media screen and(max-width:320px) {
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
   }
+
+  @media screen and(min-width:768px) {
+    padding-top: 14px;
+    padding-bottom: 13px;
+  }
+
+  @media screen and(min-width:1200px) {
+    padding-top: 12px;
+    padding-bottom: 11px;
+  }
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 152%;
+  /* or 21px */
+  color: #7a7a7a;
 }
