--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,61 +1,65 @@
 <footer class="footer">
-    <div class="footer__container container">
-        <div class="footer__main">
-      <ul class="footer-banner">
-          <li>
-        <p class="footer-banner__paragraph">homemade ice cream made</p>
-        <p class="footer-banner__header">with passion</p>
-          </li>
-        </ul>
-        <div class="socials">
-          <ul class="socials__list list">
-            <li class="socials__item">
-              <a class="socials__link"
-                href="https://github.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="link to GitHub">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="images\svg\icons.svg#icon-git"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link"
-                href="https://web.telegram.org/z/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="link to Telegram">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="images\svg\icons.svg#icon-telegram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a class="socials__link"
-                href="https://uk-ua.facebook.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="link to Facebook">
-                <svg class="socials__icon" width="20" height="20">
-                  <use
-                    href="./images\svg\icons.svg#icon-facebook">
-                </use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-  <div class="footer-contacts">
-          <address class="footer-contacts__address">
-            <span class="footer-contacts__text">Feel free to contact</span>
-            <a class="footer-contacts__tel" href="tel:+610383766284"
-              >+61 (0) 383 766 284</a>
-          </address>
-        </div>
+  <div class="footer__container container">
+    <!-- <div class="footer__main"> -->
+    <div class="footer-banner">
+      <p class="footer-banner__paragraph">homemade ice cream made</p>
+      <p class="footer-banner__header">with passion</p>
     </div>
-        </div>
-    <div class="copyright">
-      <p class="copyright__text"> © 2022 - IceCream. All Rights Reserved. </p>
+    <div class="socials-box">
+      <ul class="socials__list list">
+        <li class="socials__item">
+          <a
+            class="socials__link"
+            href="https://github.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            aria-label="link to GitHub"
+          >
+            <svg class="socials__icon" width="20" height="20">
+              <use href="images\svg\icons.svg#icon-git"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a
+            class="socials__link"
+            href="https://web.telegram.org/z/"
+            target="_blank"
+            rel="noreferrer noopener"
+            aria-label="link to Telegram"
+          >
+            <svg class="socials__icon" width="20" height="20">
+              <use href="images\svg\icons.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a
+            class="socials__link"
+            href="https://uk-ua.facebook.com/"
+            target="_blank"
+            rel="noreferrer noopener"
+            aria-label="link to Facebook"
+          >
+            <svg class="socials__icon" width="20" height="20">
+              <use href="./images\svg\icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <!-- <div class="footer-contacts"> -->
+      <!-- <address class="footer-contacts__address"> -->
+      <p class="footer-contacts__text">
+        Feel free to contact
+        <a class="footer-contacts__tel link" href="tel:+610383766284"
+          >+61 (0) 383 766 284</a
+        >
+      </p>
+      <!-- </address> -->
+      <!-- </div> -->
     </div>
-    </div>
-  </footer>
+    <!-- </div> -->
+  </div>
+  <div class="footer-border"></div>
+  <p class="copyright">© 2022 - IceCream. All Rights Reserved.</p>
+</footer>
