--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -1,17 +1,19 @@
 .gallery {
+  max-width: 100vw;
   padding-top: 0;
   padding-bottom: 0;
-
-  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+
   background-color: var(--primery-text-color);
+
   background-position: center;
   background-image: url(../images/bg/bg-ice-cream.sec4.mobile_@1x.png);
   background-size: cover;
 
   @media screen and (max-width: 480px) {
     max-width: 480px;
+
     background-size: contain;
     background-position: top;
     background-repeat: repeat;
@@ -26,10 +28,12 @@
 
   @media screen and (min-width: 481px) {
     max-width: 768px;
+
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-image: url(../images/bg/bg.sec.2.tablet_@1x.png);
+
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -39,7 +43,9 @@
 
   @media screen and (min-width: 769px) {
     max-width: 1600px;
+
     background-image: url(../images/bg/bg.sec.2_@1x.png);
+
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -54,16 +60,16 @@
 
   & .reviews {
     padding-top: 80px;
-    padding-bottom: 48px;
+    padding-bottom: 394px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       padding-top: 60px;
-      padding-bottom: 80px;
+      padding-bottom: 383px;
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       padding-top: 128px;
-      padding-bottom: 100px;
+      padding-bottom: 207px;
     }
   }
 }
@@ -79,11 +85,11 @@
   @extend %list;
   transform: translateY(-24px);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     transform: translateY(-164px);
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     transform: translateY(-94px);
   }
 }
@@ -110,17 +116,21 @@
 .reviews__item {
   width: 100%;
 
+  &:not(:last-child) {
+    margin-right: 1px;
+  }
+
   & .image {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 32px;
     border-radius: 50%;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       margin-bottom: 28px;
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: $desktop) {
       margin-bottom: 32px;
     }
   }
@@ -130,28 +140,27 @@
   margin-bottom: 30px;
   padding: 34px 39px;
 
-  font-weight: 400;
   font-size: 12px;
-  line-height: calc(31 / 12);
+  line-height: decimal-round(calc(31 / 12));
   text-align: center;
 
   color: var(--primery-text-color);
-  background-color: #84a178;
+  background-color: var(--main-bg-color);
 
   border-radius: 10px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     padding: 28px 80px;
 
     font-size: 14px;
-    line-height: calc(26 / 14);
+    line-height: decimal-round(calc(26 / 14));
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     padding: 39px 74px;
 
     font-size: 16px;
-    line-height: calc(30 / 16);
+    line-height: decimal-round(calc(30 / 16));
   }
 }
 
@@ -160,36 +169,37 @@
 
   font-weight: 500;
   font-size: 20px;
-  line-height: calc(37 / 20);
+  line-height: decimal-round(calc(37 / 20));
   text-align: center;
 
-  color: #131313;
+  color: var(--primery-title-color);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     font-size: 16px;
-    line-height: calc(30 / 16);
+    line-height: decimal-round(calc(30 / 16));
   }
 }
 
 .slick-dots {
   @extend %list;
+
+  & li button:before {
+    font-size: 12px;
+    color: #d9d9d9;
+    opacity: 1;
+  }
+
+  li.slick-active button:before {
+    font-size: 12px;
+    color: var(--main-bg-color);
+    opacity: 1;
+  }
 }
 
-.slick-dots li button:before {
-  font-size: 12px;
-  color: #d9d9d9;
-  opacity: 1;
-}
-
-.slick-dots li.slick-active button:before {
-  font-size: 12px;
-  color: #84a178;
-  opacity: 1;
-}
-
-.slick-prev:before {
+.slick-dots .slick-prev:before {
   display: none;
 }
+
 .slick-next:before {
   display: none;
 }
