--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -113,7 +113,7 @@
       <button
         type="button"
         data-modal="franchise"
-        class="btn_transparent open-modal js-open-modal"
+        class="btn_transparent btn-franch open-modal js-open-modal"
       >
         Franchise<svg class="btn_arrow" width="12" height="12">
           <use href="/src/images/svg/icons.svg#btn-arrow"></use>
