--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -264,7 +264,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .btn_transparent {
+  .btn-franch {
     margin-right: auto;
     margin-left: auto;
   }
