--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,5 @@
 <footer class="footer">
   <div class="footer__container container">
-    <!-- <div class="footer__main"> -->
     <div class="footer-banner">
       <p class="footer-banner__paragraph">homemade ice cream made</p>
       <p class="footer-banner__header">with passion</p>
@@ -47,18 +46,14 @@
           </a>
         </li>
       </ul>
-      <!-- <div class="footer-contacts"> -->
-      <!-- <address class="footer-contacts__address"> -->
       <p class="footer-contacts__text">
         Feel free to contact
         <a class="footer-contacts__tel link" href="tel:+610383766284"
           >+61 (0) 383 766 284</a
         >
       </p>
-      <!-- </address> -->
-      <!-- </div> -->
     </div>
-    <!-- </div> -->
   </div>
   <div class="footer-border"></div>
   <p class="copyright">© 2022 - IceCream. All Rights Reserved.</p>
+</footer>
