fixes for about+advant
added paddings to the bottom of advant section, deleted unneeded styles and comments
-Anastasia Demianenko

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -8,7 +8,7 @@
       </li>
       <li class="advantages__item">
         <div class="advantages__circle advantages__circle-weight"></div>
-        <p class="advantages__point">16 KG</p>
+        <p class="advantages__point">16kg</p>
         <p class="advantages__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
       </li>
       <li class="advantages__item">
