--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,19 +1,28 @@
-// .hero {
-// background-position: center;
-// background-repeat: no-repeat;
-// background-size: cover;
-// @media screen and (max-width: 767px) {
-// background-image: url('../images/header/points.mobile_@2x.png');
-// height: 448px;
-// }
-// @media screen and (min-width: 768px) and (max-width: 1199px) {
-// height: 338px;
-// background-image: url('../images/header/points.tablet_@2x.png');
-// }
-// @media screen and (min-width: 1200px) {
-// background-image: url('../images/header/points.desc_@2x.png');
-// }
-// }
+.hero {
+  padding-bottom: 239px;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 13px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 65px;
+  }
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // @media screen and (max-width: 767px) {
+  // background-image: url('../images/header/points.mobile_@2x.png');
+  // height: 448px;
+  // }
+  // @media screen and (min-width: 768px) and (max-width: 1199px) {
+  // height: 338px;
+  // background-image: url('../images/header/points.tablet_@2x.png');
+  // }
+  // @media screen and (min-width: 1200px) {
+  // background-image: url('../images/header/points.desc_@2x.png');
+  // }
+}
 
 .hero__wrap {
   // flex-direction: column;
@@ -22,7 +31,7 @@
     margin-top: 61px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) {
     margin-top: 40px;
   }
 
@@ -189,6 +198,7 @@
 // display: none;
 // }
 // }
+
 .hero-desc__text {
   // display: flex;
   // align-items: center;
