add styles to hero

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="hero__container container">
+  <div class="hero-container container">
     <div class="hero__wrap">
       <h1 class="hero-title">
         ice cream made width <span class="hero-title__box">passion</span>
@@ -23,20 +23,26 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, incididunt ut
         labore et
       </p>
-      <svg class="icon-button" width="40px" height="15px">
-        <use
-          class="arrow arrow--default"
-          href="./images/svg/icons.svg#arrow-default"
-        ></use>
-        <use
-          class="arrow arrow--hover"
-          href="./images/svg/icons.svg#arrow-hover"
-        ></use>
-        <use
-          class="arrow arrow--focus"
-          href="./images/svg/icons.svg#arrow-focus"
-        ></use>
-      </svg>
+      <button
+        class="button hero-btn-arrow open-modal js-open-modal"
+        data-modal="buy-now_ingredients"
+        type="button"
+      >
+        <svg class="icon-button" width="40px" height="15px">
+          <use
+            class="arrow arrow--default"
+            href="./images/svg/icons.svg#arrow-default"
+          ></use>
+          <use
+            class="arrow arrow--hover"
+            href="./images/svg/icons.svg#arrow-hover"
+          ></use>
+          <use
+            class="arrow arrow--focus"
+            href="./images/svg/icons.svg#arrow-focus"
+          ></use>
+        </svg>
+      </button>
     </div>
 
     <div class="hero-thumb">
