--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,8 +1,8 @@
 body {
   background-color: var(--main-bg-color);
+  color: var(--primery-text-color);
   font-family: 'Montserrat';
   font-style: normal;
-  color: #fcfcfc;
 }
 
 a,
