add gallery link

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,11 +23,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, incididunt ut
         labore et
       </p>
-      <button
-        class="button hero-btn-arrow open-modal js-open-modal"
-        data-modal="buy-now_ingredients"
-        type="button"
-      >
+      <a class="hero-btn-arrow" href="#gallery">
         <svg class="icon-button" width="40px" height="15px">
           <use
             class="arrow arrow--default"
@@ -42,7 +38,7 @@
             href="./images/svg/icons.svg#arrow-focus"
           ></use>
         </svg>
-      </button>
+      </a>
     </div>
 
     <div class="hero-thumb">
