--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -290,6 +290,9 @@
 }
 
 .hero-thumb {
+  text-align: right;
+  margin-left: auto;
+  margin-top: 28px;
   // position: absolute;
   // left: 90%;
   // display: flex;
@@ -304,16 +307,14 @@
   font-weight: 900;
   font-size: 28px;
   line-height: 34px;
-  // text-align: right;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-
   color: var(--primery-title-color);
 
-  // @media screen and (min-width: 1200px) {
-  // font-size: 46px;
-  // line-height: 56px;
-  // }
+  @media screen and (min-width: 1200px) {
+    font-size: 46px;
+    line-height: 56px;
+  }
 }
 
 // .hero-thumb__numb:not(:first-child) {
@@ -328,14 +329,13 @@
 .hero-thumb__text {
   font-size: 8px;
   line-height: 10px;
-  // text-align: right;
 
-  margin-top: 4px;
-  color: var(--primery-text-color);
+  // margin-top: 4px;
+  // color: var(--primery-text-color);
 
   @media screen and (min-width: 1200px) {
     font-size: 14px;
-    line-height: 1.28;
+    line-height: 17px;
   }
 }
 
