--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -301,6 +301,10 @@
   @media screen and (max-width: 767px) {
     display: none;
   }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 53px;
+  }
 }
 
 .hero-thumb__numb {
