--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -20,8 +20,8 @@
     </div>
     <div class="hero-desc">
       <p class="hero-desc__text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, incididunt ut
-        labore et
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et
       </p>
       <a class="hero-btn-arrow" href="#gallery">
         <svg class="icon-button" width="40px" height="15px">
@@ -41,12 +41,12 @@
       </a>
     </div>
 
-    <div class="hero-thumb">
-      <p class="hero-thumb__numb">16</p>
-      <p class="hero-thumb__text">cafes</p>
-      <p class="hero-thumb__numb">23</p>
-      <p class="hero-thumb__text">food trucks</p>
-    </div>
+    <ul class="hero-thumb">
+      <li class="hero-thumb__numb">16</li>
+      <li class="hero-thumb__text">cafes</li>
+      <li class="hero-thumb__numb">23</li>
+      <li class="hero-thumb__text">food trucks</li>
+    </ul>
     <!-- <div>
   <picture>
   <source
