--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -206,6 +206,7 @@
 
   @media screen and (min-width: 1200px) {
     margin-top: 368px;
+    transform: translateX(1);
   }
 }
 
@@ -216,6 +217,7 @@
   width: 151px;
   height: 85px;
 
+  margin-bottom: 14px;
   font-size: 12px;
   line-height: 17px;
 
@@ -228,6 +230,7 @@
     height: 80px;
     font-size: 14px;
     line-height: 20px;
+    margin-bottom: 25px;
   }
 }
 
@@ -237,11 +240,6 @@
     display: none;
   }
   padding: 0;
-  margin-top: 14px;
-
-  @media screen and (min-width: 1200px) {
-    margin-top: 25px;
-  }
 
   max-height: 30px;
   border: none;
@@ -321,6 +319,14 @@
   }
 }
 
+.hero-thumb__numb:nth-child(3) {
+  margin-top: 20px;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 16px;
+  }
+}
+
 // .hero-thumb__numb:not(:first-child) {
 // @media screen and (min-width: 767px) {
 // margin-top: 30px;
@@ -334,7 +340,7 @@
   font-size: 8px;
   line-height: 10px;
 
-  // margin-top: 4px;
+  margin-top: 4px;
   // color: var(--primery-text-color);
 
   @media screen and (min-width: 1200px) {
